# lambda-mountain

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  calligraphy.tex  codegen-strict.lm.bak  demangle  errors.err  errors.txt  pp.s  preprocess.lm.bak  profile-promises.sh  report.sh  t.lm  test.lm  test_results.txt  tmp.c  typecheck.lm.bak  utility.lm.bak
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
BOOTSTRAP/: cli.c  cli.l  cli.lm  cli.s  monolithic.lsts  prelude.text  production1.s
DEV/: cli.lm  codegen.lm  stable-cli.lm  stable-parse.lm  stable-preprocess.lm  stable-tokenize.lm  stable-types.lm  stable.lm  typecheck.lm
DOBY/: cli.lm  doc.lm
EXAMPLES/: collections.lsts  collections.lsts.out  control-flow.lsts  control-flow.lsts.out  hello-world.lsts  list-destructuring.lsts  list-destructuring.lsts.out  numerical-pyramid.lsts  phi-types.lsts  phi-types.lsts.out  string-formatting.lsts  string-formatting.lsts.out  tokenizer.lsts  tokenizer.lsts.out  type-declarations.lsts
LIB/: binop-macro.lm  default-blobs.lm  default-btree.lm  default-cdecl-return.lm  default-cell.lm  default-i16.lm  default-i32.lm  default-i64.lm  default-i8.lm  default-instruction-macros-16.lm  default-instruction-macros-32.lm  default-instruction-macros-64.lm  default-instruction-macros-8.lm  default-instruction-set.lm  default-l.lm  default-list.lm  default-malloc.lm  default-minimal.lm  default-numerical-methods.lm  default-primitives.lm  default-rc.lm  default-rules.lm  default-stdlib.lm  default-u16.lm  (+20 more)
(+1957 files in other folders)
