[package]
name = "lambda_mountain"
version = "1.15.3"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Compiler Backend / Programming Language Scaffolding"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/-"
keywords = ["programming-language","interpreter","compiler"]

[dependencies]
glob = { version = "0.3" }
