[package]
name = "lambda_mountain"
version = "1.22.5"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Typed Macro Assembler (backed by Coq proofs-of-correctness)"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew4328/-"
documentation = "https://andrew4328.github.io/lambda-mountain/"
keywords = ["programming-language","interpreter","compiler"]

[dependencies]
glob = { version = "0.3" }
